<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_novedades"
          android:title="@string/menu_news">
    </item>

    <item android:id="@+id/nav_movies"
          android:title="@string/menu_movies">
        <menu>
            <item android:id="@+id/nav_movies_populares"
                  android:title="@string/menu_popular"/>
            <item android:id="@+id/nav_top_movies_rated"
                  android:title="@string/menu_top_rated"/>

            <item android:id="@+id/nav_movies_uncoming"
                  android:title="@string/menu_upcoming"/>
        </menu>
    </item>

    <item android:id="@+id/nav_series"
          android:title="@string/menu_series">
        <menu>
            <item android:id="@+id/nav_series_populares"
                  android:title="@string/menu_popular"/>

            <item android:id="@+id/nav_series_top_rated"
                  android:title="@string/menu_top_rated"/>
        </menu>
    </item>
</menu>