<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/colorPrimary"
        tools:context=".activity.MoviesTvSeriesActivity">

    <ScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:id="@+id/content_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?attr/actionBarSize">

            <TextView
                    android:layout_marginTop="@dimen/margin_default"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/margin_default"
                    android:textColor="@color/colorAccentDark"
                    android:text="@string/label_popular_movies"
                    android:textSize="@dimen/text_extra_mayus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <android.support.v7.widget.RecyclerView
                    android:layout_marginTop="@dimen/margin_default"
                    android:id="@+id/view_popular_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginStart="@dimen/margin_default"
                    android:textColor="@color/colorAccentDark"
                    android:text="@string/label_top_rated_movies"
                    android:textSize="@dimen/text_extra_mayus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <android.support.v7.widget.RecyclerView
                    android:layout_marginTop="@dimen/margin_default"
                    android:id="@+id/view_top_rated_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginStart="@dimen/margin_default"
                    android:textColor="@color/colorAccentDark"
                    android:text="@string/label_upcoming_movies"
                    android:textSize="@dimen/text_extra_mayus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <android.support.v7.widget.RecyclerView
                    android:layout_marginTop="@dimen/margin_default"
                    android:id="@+id/view_upcoming_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginStart="@dimen/margin_default"
                    android:textColor="@color/colorAccentDark"
                    android:text="Series de Tv Populares"
                    android:textSize="@dimen/text_extra_mayus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <android.support.v7.widget.RecyclerView
                    android:layout_marginTop="@dimen/margin_default"
                    android:id="@+id/view_popular_tv_series"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginStart="@dimen/margin_default"
                    android:textColor="@color/colorAccentDark"
                    android:text="Proximos Estrenos Tv Series"
                    android:textSize="@dimen/text_extra_mayus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <android.support.v7.widget.RecyclerView
                    android:layout_marginTop="@dimen/margin_default"
                    android:id="@+id/view_upcoming_tv_series"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>

    <include
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <android.support.design.widget.NavigationView
            android:id="@+id/navigation_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/drawer_header"
            app:menu="@menu/menu_drawer_movies"/>

</android.support.v4.widget.DrawerLayout>